infra-socle/tools/generate-ingress-tmpl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${INGRESS_NAME}-http-solver
  namespace: $INGRESS_NAMESPACE
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
spec:
  rules:
    - host: solver.apps.${SUBDOMAIN}.${DOMAIN_NAME}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${INGRESS_NAME}-ingress
  namespace: $INGRESS_NAMESPACE
  annotations:
    cert-manager.io/cluster-issuer: ${INGRESS_NAME}-letsencrypt-issuer
spec:
  tls:
    - hosts:
        - ${INGRESS_HOSTNAME}
      secretName: ${INGRESS_NAME}-issuer-account-key
  rules:
    - host: ${INGRESS_HOSTNAME}
